k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gowebapp
  labels:
    app: gowebapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gowebapp
  template:
    metadata:
      labels:
        app: gowebapp
    spec:
      containers:
      - name: gowebapp
        image: sivabalan2510/gowebapp:v1
        ports:
        - containerPort: 8080
