k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowebapp-service
spec:
  type: NodePort
  selector:
    app: gowebapp
  ports:
    - port: 80
      targetPort: 8080
