k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "gowebapp.local"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: gowebapp
            port:
              number: 80
